--- a/src/main/resources/public/scss/formDesigner/_thumbnail.scss
+++ b/src/main/resources/public/scss/formDesigner/_thumbnail.scss
@@ -2,15 +2,15 @@
 
 // 썸네일 모달
 .modal-dialog {
-  &.#{$common-prefix}thumbnail-image {
+  &.z-thumbnail-image {
     width: $thumbnail-modal-width;
     height: $thumbnail-modal-height;
     
     .modal-content {
       height: calc(#{$thumbnail-modal-height} - #{$modal-header-height} - #{$modal-bottom-height});
 
-      .#{$common-prefix}thumbnail-main {
-        .#{$common-prefix}thumbnail {
+      .z-thumbnail-main {
+        .z-thumbnail {
           width: 14.375rem; // 230px
         }
       }
