--- a/src/main/resources/public/scss/formDesigner/_buttons.scss
+++ b/src/main/resources/public/scss/formDesigner/_buttons.scss
@@ -1,9 +1,9 @@
 @import "../template/buttons";
 
 // header button
-.#{$common-prefix}header-button {
-  &.#{$common-prefix}button-icon {
-    .#{$common-prefix}icon {
+.z-header-button {
+  &.z-button-icon {
+    .z-icon {
       pointer-events: none;
       &.i-save {
         @include maskImage('#{$icon-folder-path}formDesigner/topmenu/icon_save.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
@@ -28,16 +28,16 @@
 }
 
 // header dropdown button
-.#{$common-prefix}header-button-dropdown {
+.z-header-button-dropdown {
   width: 1.25rem; // 20px
   padding: 0.25rem 0; // 4px 0
 
-  .#{$common-prefix}icon {
+  .z-icon {
     margin-left: -0.1875rem; // -3px
     pointer-events: none;
   }
 
-  + .#{$common-prefix}dropdown-content {
+  + .z-dropdown-content {
     min-width: 9.625rem; // 154px
     visibility: hidden;
     @include absolute($right: 0);
@@ -48,10 +48,10 @@
     @include border($layout-header-dropdown-border-width, solid, $layout-header-dropdown-border-color, all); // 1px
     @include boxShadow(0, 2px, 12px, 0, $layout-header-dropdown-box-shadow-color); // 0, 2px, 12px, 0
 
-    .#{$common-prefix}dropdown-item {
+    .z-dropdown-item {
       padding: 0.25rem 0 0 0; // 4px 0 0 0
 
-      .#{$common-prefix}button-dropdown {
+      .z-button-dropdown {
         width: 100%;
         font-weight: $font-weight-medium;
         color: map-get($layout-header-dropdown, 'default', 'font');
@@ -95,12 +95,12 @@
   }
 
   &.active {
-    .#{$common-prefix}icon {
+    .z-icon {
       &.i-arrow-right {
         @include rotate(-90);
       }
     }
-    + .#{$common-prefix}dropdown-content {
+    + .z-dropdown-content {
       visibility: visible;
       display: block;
     }
@@ -110,15 +110,15 @@
 // button group
 // (1) button switch group : 버튼 그룹 중 하나의 버튼만 선택
 // (2) button toggle group : 버튼 그룹 각 버튼 토글 가능
-.#{$common-prefix}button-switch-group,
-.#{$common-prefix}button-toggle-group {
+.z-button-switch-group,
+.z-button-toggle-group {
 
-  .#{$common-prefix}button-switch,
-  .#{$common-prefix}button-toggle {
+  .z-button-switch,
+  .z-button-toggle {
 
-    .#{$common-prefix}text { pointer-events: none; }
+    .z-text { pointer-events: none; }
 
-    .#{$common-prefix}icon {
+    .z-icon {
       pointer-events: none;
       &.i-align-left {
         @include maskImage('#{$icon-folder-path}formDesigner/property/icon_align_left.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
@@ -158,14 +158,14 @@
 }
 
 // 열속성 > tab 버튼
-.#{$common-prefix}tab {
+.z-tab {
   color: map-get($button-tab, 'default', 'font');
   background-color: map-get($button-tab, 'default', 'background');
   border-color: map-get($button-tab, 'default', 'border');
   @if map-get($button-tab, 'default', 'shadow') != null {
     box-shadow: map-get($button-tab, 'default', 'shadow');
   }
-  .#{$common-prefix}icon {
+  .z-icon {
     background: map-get($button-tab, 'default', 'font');
   }
 
@@ -177,7 +177,7 @@
     @if map-get($button-tab, 'focus', 'shadow') != null {
       box-shadow: map-get($button-tab, 'focus', 'shadow');
     }
-    .#{$common-prefix}icon {
+    .z-icon {
       background: map-get($button-tab, 'focus', 'font');
     }
   }
@@ -190,7 +190,7 @@
     @if map-get($button-tab, 'hover', 'shadow') != null {
       box-shadow: map-get($button-tab, 'hover', 'shadow');
     }
-    .#{$common-prefix}icon {
+    .z-icon {
       background: map-get($button-tab, 'hover', 'font');
     }
   }
@@ -204,7 +204,7 @@
     @if map-get($button-tab, 'active', 'shadow') != null {
       box-shadow: map-get($button-tab, 'active', 'shadow');
     }
-    .#{$common-prefix}icon {
+    .z-icon {
       background: map-get($button-tab, 'active', 'font');
     }
   }
@@ -218,7 +218,7 @@
     @if map-get($button-tab, 'selected', 'shadow') != null {
       box-shadow: map-get($button-tab, 'selected', 'shadow');
     }
-    .#{$common-prefix}icon {
+    .z-icon {
       background: map-get($button-tab, 'selected', 'font');
     }
   }
@@ -232,7 +232,7 @@
     @if map-get($button-tab, 'disabled', 'shadow') != null {
       box-shadow: map-get($button-tab, 'disabled', 'shadow');
     }
-    .#{$common-prefix}icon {
+    .z-icon {
       background: map-get($button-tab, 'disabled', 'font');
     }
   }
