--- a/src/main/resources/public/scss/formDesigner/_tooltip.scss
+++ b/src/main/resources/public/scss/formDesigner/_tooltip.scss
@@ -1,19 +1,19 @@
 @import '../template/_tooltip.scss';
 // clipboard - 복사 용도
-.#{$common-prefix}clipboard-tooltip {
+.z-clipboard-tooltip {
   position: relative;
   display: inline-block;
   margin-left: 0.3125rem; // 5px
   cursor: pointer;
 
   &:hover {
-    .#{$common-prefix}clipboard-tooltip-text {
+    .z-clipboard-tooltip-text {
       visibility: visible;
       opacity: 1;
     }
   }
 
-  .#{$common-prefix}clipboard-tooltip-text {
+  .z-clipboard-tooltip-text {
     @include absolute($left: 50%, $bottom: 120%);
     width: 9.375rem; //150px
     font-family: $clipboard-tooltip-font-family;
