--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -2238,7 +2238,7 @@ body.modal-active {
   border: 0.0625rem solid #FFFFFF;
 }
 
-.z-group.accordion .z-group-accordion-checkBox:checked ~ .z-row-tooltip[draggable=false] :not(.off):not(.selected):last-child {
+.z-group.accordion .z-group-accordion-checkBox:checked ~ .wrow-tooltip:not(.off):last-child {
   border-bottom: 0.0625rem solid #CFD5D9;
 }
 
