--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -887,7 +887,6 @@ input, button, select, optgroup, textarea {
   justify-content: space-between;
   width: 20rem;
   background-color: #FFFFFF;
-  box-shadow: -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.15);
   overflow-x: hidden;
   overflow-y: auto;
   -ms-overflow-style: none;
@@ -5752,8 +5751,7 @@ body.modal-active {
   display: inline-block;
   min-height: 56.25rem;
   background-color: #FFFFFF;
-  border: 0.0625rem solid #CFD5D9;
-  box-shadow: 0 0 0.9375rem 0 rgba(204, 206, 209, 0.3);
+  border: 0.0625rem solid #EBEBEB;
 }
 .z-form *:focus {
   outline: none !important;
@@ -5761,8 +5759,8 @@ body.modal-active {
 
 .z-group-tooltip {
   position: relative;
-  padding: 0.875rem 0.875rem 1.5625rem 0.875rem;
-  border: 0.0625rem solid #CFD5D9;
+  padding: 0.9375rem;
+  border: 0.0625rem solid #D7DBE0;
   border-radius: 0.125rem;
   -webkit-border-radius: 0.125rem;
   -moz-border-radius: 0.125rem;
@@ -5770,7 +5768,7 @@ body.modal-active {
 }
 .z-group-tooltip.selected {
   background-color: #F1F9FC;
-  border-color: #339AF0;
+  border-color: #F1F9FC;
 }
 .z-group-tooltip.selected > .z-tooltip-menu {
   visibility: visible;
@@ -5791,6 +5789,7 @@ body.modal-active {
   display: table;
   width: 100%;
   min-height: 2.5rem;
+  padding: 0 0.625rem 0 0.625rem;
   margin: 0 0 0.9375rem 0;
 }
 .z-group-label.off {
@@ -5803,26 +5802,27 @@ body.modal-active {
 }
 .z-group-label .z-icon.i-arrow-right {
   display: table-cell;
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+  background: #8B9094;
+  opacity: 0;
+}
+.z-group.accordion .z-group-accordion-checkBox:checked + .z-group-label .z-icon.i-arrow-right {
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
   -o-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   transform: rotate(90deg);
-  background: #8B9094;
-  opacity: 0;
-}
-.z-group.accordion .z-group-accordion-checkBox:checked + .z-group-label .z-icon.i-arrow-right {
-  -webkit-transform: rotate(270deg);
-  -moz-transform: rotate(270deg);
-  -o-transform: rotate(270deg);
-  -ms-transform: rotate(270deg);
-  transform: rotate(270deg);
 }
 .z-group.accordion .z-group-accordion-checkBox:checked ~ .z-row-tooltip:not(.off) {
   display: block;
 }
 .z-group.accordion .z-group-label {
   border-bottom: 0.125rem solid #CFD5D9;
+  padding: 0 1.125rem 0 0.625rem;
   cursor: pointer;
 }
 .z-group.accordion .z-group-label.off {
@@ -5848,7 +5848,7 @@ body.modal-active {
 
 .z-row-tooltip {
   position: relative;
-  border: 0.0625rem solid #CFD5D9;
+  border: 0.0625rem solid #D7DBE0;
   border-radius: 0.125rem;
   -webkit-border-radius: 0.125rem;
   -moz-border-radius: 0.125rem;
@@ -5868,16 +5868,19 @@ body.modal-active {
 .z-component-tooltip {
   position: relative;
   flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12 + (var(--data-column) - 1) * 0px);
-  padding: 0.3125rem;
-  margin: 0.3125rem;
-  border: 0.0625rem dashed #CFD5D9;
-  border-radius: 0.125rem;
-  -webkit-border-radius: 0.125rem;
-  -moz-border-radius: 0.125rem;
+  padding: 0.375rem 0.5rem;
+  margin: 0.5rem;
+  border: 0.0625rem dashed #D7DBE0;
+  border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   background-color: transparent;
 }
+.z-component-tooltip:first-child:nth-last-child(1) {
+  border: 0.0625rem solid #D7DBE0;
+}
 .z-component-tooltip.selected {
-  border: 0.0625rem solid #0098FF;
+  border: 0.0625rem solid #339AF0;
   background-color: #F1F9FC;
 }
 .z-component-tooltip.selected > .z-tooltip-menu {
@@ -5911,14 +5914,14 @@ body.modal-active {
 }
 .z-component .z-element {
   flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12 + (var(--data-column) - 1) * 0px);
-  margin: auto 0;
+  padding: 0.4375rem 0;
 }
 .z-component .z-element .input, .z-component .z-element .z-input {
   width: 100%;
-  border: 0.0625rem solid #CFD5D9;
-  border-radius: 0.125rem;
-  -webkit-border-radius: 0.125rem;
-  -moz-border-radius: 0.125rem;
+  border: 0.0625rem solid #EBEBEB;
+  border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
 }
 .z-component .z-element .textArea, .z-component .z-element .z-textarea {
   width: 100%;
@@ -5940,11 +5943,11 @@ body.modal-active {
 }
 .z-component .z-element .z-imagebox-placeholder {
   display: none;
-  height: 8.5rem;
+  height: 8.75rem;
   font-size: 1rem;
   font-weight: 400;
-  color: #8B9094;
-  border: 0.0625rem solid #CFD5D9;
+  color: #ACB4BF;
+  border: 0.0625rem solid #EBEBEB;
   background-color: #FAFAFA;
   text-align: center;
   padding: 1.875rem 0 0.625rem;
@@ -5954,16 +5957,16 @@ body.modal-active {
 }
 .z-component .z-element .z-imagebox-placeholder .z-icon.i-no-image {
   width: 100%;
-  height: 3.75rem;
-  -webkit-mask-image: url("../media/icons/icon_image_uploader.svg ");
-  mask-image: url("../media/icons/icon_image_uploader.svg ");
+  height: 2.813rem;
+  -webkit-mask-image: url("../media/icons/icon_image.svg");
+  mask-image: url("../media/icons/icon_image.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  -webkit-mask-size: 3.75rem;
-  mask-size: 3.75rem;
-  background: #8B9094;
+  -webkit-mask-size: 2.813rem;
+  mask-size: 2.813rem;
+  background: #ACB4BF;
 }
 .z-component .z-element .z-imagebox {
   width: 100%;
@@ -5991,10 +5994,10 @@ body.modal-active {
   display: table-cell;
 }
 .z-component .z-element .z-ci-table .z-ci-table-header {
-  background-color: #F7F8F9;
+  background-color: #F5F5F5;
 }
 .z-component .z-element .z-ci-table .z-ci-table-header td {
-  color: #586872;
+  color: #ABB0B5;
   font-weight: 700;
 }
 .z-component .z-element .z-ci-table .no-data-found-list {
@@ -6020,7 +6023,7 @@ body.modal-active {
   display: table-cell;
 }
 .z-component .z-element .z-dr-table .z-dr-table-header {
-  background-color: #F7F8F9;
+  background-color: #F5F5F5;
 }
 .z-component .z-element .z-dr-table .z-dr-table-header .z-dr-table-header-cell {
   padding: 1rem;
@@ -6039,6 +6042,12 @@ body.modal-active {
   line-height: 2rem;
   padding-top: 0.625rem;
 }
+.z-component .z-element .z-custom-code > .z-input {
+  margin-right: 0.5rem;
+  border-radius: 0.125rem;
+  -webkit-border-radius: 0.125rem;
+  -moz-border-radius: 0.125rem;
+}
 
 .z-component .z-component-label .required.off {
   display: none;
@@ -6052,7 +6061,7 @@ body.modal-active {
   position: absolute;
   background-color: #FFFFFF;
   height: 2.5rem;
-  box-shadow: 0 0 0 0.0625rem #87CEFF inset;
+  box-shadow: 0 0 0 0.0625rem #CFD5D9 inset;
   bottom: 100%;
   right: -0.0625rem;
 }
@@ -6080,7 +6089,7 @@ body.modal-active {
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #87CEFF;
+  background: #CFD5D9;
 }
 .z-tooltip-menu .z-tooltip-menu-items .z-tooltip-menu-item .icon.icon-remove {
   width: 1.25rem;
@@ -6091,7 +6100,7 @@ body.modal-active {
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #87CEFF;
+  background: #CFD5D9;
 }
 .z-tooltip-menu .z-tooltip-menu-items .z-tooltip-menu-item:hover .icon {
   background: #0098FF;
