--- a/src/main/resources/public/scss/document/_form.scss
+++ b/src/main/resources/public/scss/document/_form.scss
@@ -2,16 +2,15 @@
 // 툴팁 border 초기화
 $tooltip-type: (group, row, component);
 @each $type in $tooltip-type {
-  .#{$common-prefix}#{$type}-tooltip {
+  .z-#{$type}-tooltip {
     @include border(0.0625rem, solid, $drawing-board-bg-color, all); // 1px
   }
 }
 
-.#{$common-prefix}group {
+.z-group {
   &.accordion {
-    .#{$common-prefix}group-accordion-checkBox:checked {
-      ~ .#{$common-prefix}row-tooltip[draggable=false]
-        :not(.off):not(.selected):last-child {
+    .z-group-accordion-checkBox:checked {
+      ~ .wrow-tooltip:not(.off):last-child {
         @include border(0.0625rem, solid, $gray300, bottom); // 1px
       }
     }
