--- a/src/main/resources/public/scss/formDesigner/_form.scss
+++ b/src/main/resources/public/scss/formDesigner/_form.scss
@@ -4,15 +4,14 @@
   display: inline-block;
   min-height: $form-min-height;
   background-color: $form-bg-color;
-  @include border(0.0625rem, solid, $form-border-color, all); // 1px
-  box-shadow: $form-box-shadow;
+  @include border(0.0625rem, solid, map-get($grays, 'line'), all); // 1px
   & *:focus { outline: none !important; }
 }
 // 그룹 툴팁
 .z-group-tooltip {
   position: relative;
-  padding: 0.875rem 0.875rem 1.5625rem 0.875rem; // 14px 14px 25px 14px
-  @include border(0.0625rem, solid, $form-border-color, all); // 1px
+  padding: 0.9375rem; // 15px
+  @include border(0.0625rem, solid, #D7DBE0, all); // 1px
   @include borderRadius($group-selected-border-radius); // 2px
   background-color: $white;
   &.selected {
@@ -39,6 +38,7 @@
     display: table;
     width: 100%;
     min-height: 2.5rem; // 40px
+    padding: 0 0.625rem 0 0.625rem; // 0 10px 0 10px
     margin: 0 0 0.9375rem 0; // 0 0 15px 0
     &.off { display: none; }
     // 라벨 문구
@@ -51,7 +51,7 @@
     .z-icon {
       &.i-arrow-right {
         display: table-cell;
-        @include rotate(90);
+        @include rotate(180);
         background: $group-accordion-icon-color;
         opacity: 0;
       }
@@ -64,7 +64,7 @@
       + .z-group-label {
         .z-icon {
           &.i-arrow-right {
-            @include rotate(270);
+            @include rotate(90);
           }
         }
       }
@@ -75,6 +75,7 @@
     // 라벨
     .z-group-label {
       @include border(0.125rem, solid, $group-accordion-border-color, bottom);
+      padding: 0 1.125rem 0 0.625rem; // 0 18px 0 10px
       cursor: pointer;
 
       &.off {
@@ -105,7 +106,7 @@
 // row 툴팁
 .z-row-tooltip {
   position: relative;
-  @include border(0.0625rem, solid, $form-border-color, all); // 1px
+  @include border(0.0625rem, solid, #D7DBE0, all); // 1px
   @include borderRadius($row-selected-border-radius);
   background-color: transparent;
   &.selected {
@@ -121,11 +122,15 @@
 .z-component-tooltip {
   position: relative;
   flex-basis: getFlexBasis(100%, 0px, $column-row, 0px);
-  padding: 0.3125rem; // 5px
+  padding: 0.375rem 0.5rem; // 6px 8px
   margin: $component-gutter;
-  @include border(0.0625rem, dashed, $form-border-color, all); // 1px
-  @include borderRadius(0.125rem); // 2px
+  @include border(0.0625rem, dashed, #D7DBE0, all); // 1px
+  @include borderRadius(0.0625rem); // 2px
   background-color: transparent;
+  // 1 row 1 component 일 경우 dashed border 제거
+  &:first-child:nth-last-child(1) {
+    @include border(0.0625rem, solid, #D7DBE0, all); // 1px
+  }
   // 컴포넌트 선택시
   &.selected {
     @include border(0.0625rem, solid, $component-selected-border-color, all); // 1px
@@ -169,13 +174,13 @@
   //       (예. .input, .z-input > .z-input )
   .z-element {
     flex-basis: getFlexBasis(100%, 0px, $column-row, 0px);
-    margin: auto 0;
+    padding: 0.4375rem 0; // 7px 0
 
     // inputBox
     .input, .z-input {
       width: 100%;
-      @include border(0.0625rem, solid, $form-border-color, all); // 1px
-      @include borderRadius(0.125rem); // 2px
+      @include border(0.0625rem, solid, map-get($grays, 'line'), all); // 1px
+      @include borderRadius(0.0625rem); // 2px
     }
     // textArea
     .textArea, .z-textarea {
@@ -205,11 +210,11 @@
     // image 컴포넌트
     .z-imagebox-placeholder {
       display: none;
-      height: 8.5rem; // 136px
+      height: 8.75rem; // 140px
       font-size: $component-imagebox-font-size;
       font-weight: $component-imagebox-font-weight;
       color: $component-imagebox-font-color;
-      @include border(0.0625rem, solid, $component-imagebox-border-color, all); // 1px
+      @include border(0.0625rem, solid, map-get($grays, 'line'), all); // 1px
       background-color: $component-imagebox-bg-color;
       text-align: center;
       padding: 1.875rem 0 0.625rem; // 30px 0 10px 0
@@ -217,7 +222,7 @@
       .z-icon {
         display: block;
         &.i-no-image {
-          @include maskImage('#{$icon-folder-path}icon_image_uploader.svg ', 100%, 3.75rem, no-repeat, center, 3.75rem, $component-imagebox-font-color); // 45px
+          @include maskImage('#{$icon-folder-path}icon_image.svg', 100%, 2.813rem, no-repeat, center, 2.813rem, $component-imagebox-font-color); // 45px
         }
       }
     }
@@ -304,6 +309,14 @@
       height: 2.5rem;
       line-height: 2rem;
       padding-top: 0.625rem;
+    }
+
+    // custom code 컴포넌트
+    .z-custom-code {
+      > .z-input {
+        margin-right: 0.5rem;
+        @include borderRadius(0.125rem); // 2px
+      }
     }
   }
 }
