--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -16,7 +16,7 @@
     </div>
 </th:block>
 <th:block layout:fragment="content">
-    <div class="flex-column z-edit hidden-scroll">
+    <div class="flex-column z-edit">
         <div class="z-scheduler-content-edit">
             <div class="flex-column z-edit-row">
                 <label for="taskName">
