#10889 디자인 - 이미지 관리 화면 : 아이콘 변경

--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -4546,7 +4546,7 @@ body.modal-active {
   height: 2.5rem;
 }
 .z-thumbnail-main .z-thumbnail .z-thumbnail-bottom .z-button-icon .z-icon.i-delete {
-  background: #8B9094;
+  background: #ABB0B5;
 }
 .z-thumbnail-main .z-thumbnail-upload {
   display: inline-block;
@@ -4559,6 +4559,10 @@ body.modal-active {
   background-color: #FAFAFA;
   cursor: pointer;
   overflow: hidden;
+}
+.z-thumbnail-main .z-thumbnail-upload .z-thumbnail-upload-text {
+  color: #339AF0;
+  font-weight: 700;
 }
 .z-thumbnail-main .z-thumbnail-upload:hover {
   border: 0.0625rem solid #339AF0;
@@ -4573,7 +4577,7 @@ body.modal-active {
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #8B9094;
+  background: #ABB0B5;
 }
 .z-thumbnail-main .z-thumbnail-nodata {
   display: inline-block;
