--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -141,7 +141,7 @@
                 let thumbnailUploadTemplate = `
                     <div class="z-thumbnail-upload align-center" onclick="document.getElementById('imageUploadFile').click();" tabindex="-1">
                         <span class="z-icon i-image-upload"></span>
-                        <p class="mt-4">${i18n.msg('image.label.upload')}</p>
+                        <p class="z-thumbnail-upload-text underline mt-2">${i18n.msg('image.label.upload')}</p>
                         <input type="file" id="imageUploadFile" accept=".png,.gif,.jpeg,.jpg" multiple onchange="uploadImage(this);" style="display: none;"/>
                     </div>
                 `;
