--- a/src/main/resources/public/scss/template/_variables.scss
+++ b/src/main/resources/public/scss/template/_variables.scss
@@ -487,7 +487,7 @@ $thumbnail-font-family:                      $font-family-s;
 $thumbnail-font-size:                        $font-size-xs;
 $thumbnail-font-weight:                      $font-weight-medium;
 $thumbnail-font-color:                       $gray500;
-$thumbnail-icon-color:                       $gray500;
+$thumbnail-icon-color:                       $gray400;
 $thumbnail-main-padding:                     0;
 $thumbnail-file-name-font-color:             $gray800;
 $thumbnail-file-name-font-weight:            $font-weight-bold;
@@ -508,6 +508,9 @@ $thumbnail-selected-box-shadow-color:        $blue600;
 
 // 썸네일 업로드
 $thumbnail-upload-bg-color:                  $neutral50;
+$thumbnail-upload-font-color:                $blue500;
+$thumbnail-upload-font-weight:               $font-weight-bold;
+
 // 썸네일 업로드 > hover
 $thumbnail-upload-hover-bg-color:            $blue100;
 
