--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -5760,7 +5760,7 @@ body.modal-active {
 .z-group-tooltip {
   position: relative;
   padding: 0.9375rem;
-  border: 0.0625rem solid #D7DBE0;
+  border: 0.0625rem solid #CFD5D9;
   border-radius: 0.125rem;
   -webkit-border-radius: 0.125rem;
   -moz-border-radius: 0.125rem;
